enviado para o codeinstages

--- a/code.html
+++ b/code.html
@@ -16,35 +16,37 @@
         <div class="logo">
           <img src="https://codeinstages.github.io/drone/Logo.png" alt="logo" />
         </div>
-      <ul class="navLinks">
-        <li>
-          <a href="">Home</a>
-        </li>
-        <li>
-          <a href="">Gallery</a>
-        </li>
-        <li>
-          <a href="">Products</a>
-        </li>
-        <li>
-          <a href="">Review</a>
-        </li>
-        <li>
-          <a href="">Support</a>
-        </li>
-      </ul>
-    </nav>
+        <ul class="navLinks">
+          <li>
+            <a href="">Home</a>
+          </li>
+          <li>
+            <a href="">Gallery</a>
+          </li>
+          <li>
+            <a href="">Products</a>
+          </li>
+          <li>
+            <a href="">Review</a>
+          </li>
+          <li>
+            <a href="">Support</a>
+          </li>
+        </ul>
+        <div class="icon">
+          <i class="bx bx-search bx-sm" style="color: #ffffff"></i>
+        </div>
+      </nav>
     </header>
+    <main>
+      <h1 class="mainTitle">Representing Drone Light</h1>
+      <p class="mainDescription">
+        Look up the sky and beautiful world with simple navigation. <br />
+        Just record and get a lot of memories to share, lightly and fast like
+        lightning.
+      </p>
+
+      <a href="/" class="button">GET NOW</a>
+    </main>
   </body>
 </html>
-
-<!-- <main>|-| Elemento `<main>` que geralmente contém o conteúdo principal de uma página web.
-                <h1 class="mainTitle">|-| Título de primeiro nível `<h1>` com a classe `mainTitle`.
-                    Representing Drone Light  |-| Texto "Representing Drone Light", que é o conteúdo do título.
-                </h1>|-| Fecha a tag `<h1>`.
-            </main>|-| Fecha a tag `<main>`.
-            
-
-<p class="mainDescription">Look up the  sky and beautiful world with simple navigation. <br>
-    Just record anmd get a lot memories to share, lighlty and fast like a lightning</p>
-<a href="/" class="button">GET NOW</a> -->
